# email-delivery-manager

./: .dockerignore  .gitignore  .ralph.env  AI-WORKFLOW.md  CLAUDE.md  CONTEXT.md  DEPLOYMENT.md  GEMINI.md  README.md  TENANT-ONBOARDING.md  docker-compose.background.yml  docker-compose.db.yml  docker-compose.web-api.yml  ralph.sh
.claude/skills/api/references/: contract.md  examples.md  operations-testing.md  security.md
.claude/skills/frontend/: SKILL.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/prd-to-issues/: SKILL.md
.claude/skills/write-prd/: SKILL.md
.gemini/skills/api/: SKILL.md
.gemini/skills/api/references/: implementation.md
.gemini/skills/python/: SKILL.md
api/: Dockerfile  README.md  pyproject.toml
api/src/app/: main.py  settings.py
api/src/app/api/: health.py
api/tests/integration/: test_health.py
api/tests/unit/: test_health_response.py
background/: Dockerfile  README.md  pyproject.toml
background/src/background/: cli.py  config.py
background/src/background/scraper/: jobs.py
background/src/background/worker/: jobs.py
background/tests/integration/scraper/: test_scraper_cli.py
background/tests/integration/worker/: test_worker_cli.py
background/tests/unit/scraper/: test_scraper_jobs.py
background/tests/unit/worker/: test_worker_jobs.py
docs/adr/: 0001-serverless-ses-notification-engine.md
docs/tenants/: subastae.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: ecosystem.spec.ts
issues/: 001-scaffold-notifications-project.md  002-walking-skeleton-render-send.md  003-payload-validation.md  004-tenant-registry-config-set-sender-enforcement.md  005-reliability-batch-failure-dlq-logging.md  006-deploy-cli.md  007-tenant-setup-cli.md  008-smoke-test-cli.md
notifications/: README.md  pyproject.toml
notifications/src/notifications/: __init__.py  cli.py  config.py  delivery.py  deploy.py  dlq.py  errors.py  handler.py  rendering.py  ses.py  smoke_test.py  tags.py  tenant_setup.py  tenants.py
notifications/src/notifications/infra/: __init__.py  stack.py
notifications/src/notifications/templates/acme/: weekly_report.html  welcome.html
notifications/src/notifications/templates/subastae/: weekly_report.html  welcome.html
notifications/tests/: conftest.py
notifications/tests/integration/: test_package_imports.py  test_render_send.py
notifications/tests/unit/: test_config.py  test_delivery.py  test_deploy.py  test_dlq.py  test_errors.py  test_handler_batch.py  test_handler_outcomes.py  test_infra_stack.py  test_rendering.py  test_ses.py  test_smoke_test.py  test_tags.py  test_tenant_setup.py  test_tenants.py
prd/: PRD.md
scripts/: verify.sh
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  models.py
shared/tests/unit/: test_models.py
web/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx  service-card.tsx  services.ts
web/tests/integration/: home-page.test.tsx
web/tests/unit/: service-card.test.tsx
