[project]
name = "email-delivery-manager-notifications"
version = "0.1.0"
description = "Serverless notification engine (render, send, deploy)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35.0",
  "jinja2>=3.1.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "troposphere>=4.8.0",
]

[project.scripts]
notifications = "notifications.cli:main"
deploy = "notifications.deploy:main"
tenant-setup = "notifications.tenant_setup:main"
smoke-test = "notifications.smoke_test:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notifications"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
